# jj-ryu

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
.opencode/state/: ralph.json
docs/rfcs/: 20260107-prd-ryu-track.md  20260107-prd-stack-comments.md  prd-ryu-track.json
npm/jj-ryu/: package.json
src/: error.rs  lib.rs  main.rs  types.rs
src/cli/: analyze.rs  mod.rs  submit.rs  sync.rs  track.rs  untrack.rs
src/graph/: builder.rs
src/repo/: workspace.rs
src/submit/: AGENTS.md  analysis.rs  execute.rs  plan.rs
src/tracking/: mod.rs  pr_cache.rs  storage.rs
tests/: execution_step_tests.rs  integration_tests.rs  unit_tests.rs
tests/common/: fixtures.rs  temp_repo.rs
