[package]
name = "jj-ryu"
version = "0.0.1-alpha.7"
edition = "2024"
rust-version = "1.85"
description = "Stacked PRs for Jujutsu with GitHub/GitLab support"
license = "MIT"
repository = "https://github.com/dmmulroy/jj-ryu"

[[bin]]
name = "ryu"
path = "src/main.rs"

[lib]
name = "jj_ryu"
path = "src/lib.rs"

[dependencies]
# jj integration
jj-lib = "0.36"
gix = { version = "0.75", default-features = false, features = ["blocking-network-client"] }

# async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP + APIs (rustls for cross-platform builds)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
octocrab = { version = "0.47", default-features = false, features = ["rustls", "default-client"] }

# serialization + utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2"
urlencoding = "2"
regex = "1"
tracing = "0.1"
dialoguer = "0.11"

# CLI styling
owo-colors = { version = "4", features = ["supports-colors"] }
anstream = "0.6"
indicatif = "0.17"
terminal-link = "0.1"
supports-hyperlinks = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
insta-cmd = "0.6"
serial_test = "3"
mockito = "1"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
